# flood-qc

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  todo.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: __init__.py
apps/ops_dashboard/: README.md  __init__.py  app.py  controller.py  dashboard.py  factory.py  map_component.py  serve.py  state.py
docs/: architecture.md  data_model.md  operations.md  workflows.md
examples/: README.md  prepare_mgb_inputs_pipeline.py
src/common/: contracts.py  paths.py  settings.py
src/ingest/: fetch_observed_ana.py  fetch_observed_inmet.py  forecast_grid.py  observed.py
src/mgb_ops/: __init__.py
src/mgb_ops/adapters/: _grib2.py  (+8 more)
src/model/: export_mgb_outputs.py  mgb_execution.py  prepare_mgb_meta.py  prepare_mgb_rainfall.py  run_builder.py  run_mgb.py
src/ops_dashboard/: README.md  app.py  legacy_app.py
src/qc/: __init__.py  automatic.py  review.py
src/reporting/: __init__.py  ops_dashboard_data.py  ops_dashboard_forecast.py  ops_dashboard_map.py  reports.py
src/storage/: db_bootstrap.py  history_repository.py
tests/: conftest.py  db_helpers.py  test_cli.py  test_export_mgb_outputs.py  test_fetch_observed_ana.py  test_fetch_observed_inmet.py  test_forecast_grid.py  test_history_repository_assets.py  test_mgb_execution.py  test_models_and_stubs.py  test_ops_dashboard_data.py  test_ops_dashboard_forecast.py  test_ops_dashboard_map.py  test_package_boundaries.py  test_paths.py  test_settings.py  test_sqlite_bootstrap.py
tests/api/: test_forecast_grid_api.py  test_models.py  test_models_and_stubs.py  test_package_boundaries.py
tests/cli/: test_cli.py
tests/config/: test_paths.py  test_runtime_env.py  test_settings.py
tests/e2e/: README.md  test_ops_dashboard_panel.py
tests/engine/: test_ecmwf_forecast_correction.py  test_export_mgb_outputs.py  test_grib2_forecast_correction.py  test_mgb_execution.py  test_mgb_rainfall_grids.py  test_prepare_mgb_meta.py  test_prepare_mgb_rainfall.py
tests/fixtures/: README.md  history_station_inventory.csv
tests/integration/: test_fetch_observed_ana.py  test_fetch_observed_inmet.py  test_forecast_assets.py  test_forecast_ecmwf.py  test_forecast_gfs.py  test_forecast_grid.py  test_forecast_noaa.py  test_forecast_scenarios.py  test_forecast_workflow.py  test_generic_acquisition_workflows.py  test_history_repository_assets.py  test_observed_ana.py  test_observed_csv_import.py  test_observed_inmet.py  test_observed_spatial_grid.py  test_observed_workflow.py  test_sqlite_bootstrap.py
tests/ui/: test_ops_dashboard_charts.py  test_ops_dashboard_controller.py  test_ops_dashboard_data.py  test_ops_dashboard_deckgl_sync.py  test_ops_dashboard_factory.py  test_ops_dashboard_forecast.py  test_ops_dashboard_map.py  test_ops_dashboard_rainfall.py  test_ops_dashboard_state.py  test_ops_dashboard_summaries.py
(+117 files in other folders)
