[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-qc-ops"
version = "0.1.0"
description = "Base operacional local-first para hidrologia e previsao."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
data = [
  "numpy>=1.26",
  "pandas>=2.1",
  "requests>=2.32",
]
geo = [
  "rasterio>=1.3",
]
ui = [
  "streamlit>=1.40",
  "plotly>=5.20",
  "folium>=0.18",
  "streamlit-folium>=0.24",
  "branca>=0.8",
  "affine>=2.4",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mgb_ops.assets" = ["sql/*.sql"]

[project.scripts]
mgb-ops = "mgb_ops.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
