[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mgb-ops"
version = "0.1.0"
description = "Operational base for setting and evaluating MGB hydrological model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
data = [
  "numpy>=1.26",
  "pandas>=2.1",
  "requests>=2.32",
]
forecast = [
  "numpy>=1.26",
  "pandas>=2.1",
  "requests>=2.32",
  "ecmwf-opendata",
  "eccodes",
]
geo = [
  "rasterio>=1.3",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mgb_ops.assets" = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
